--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.16",
     "autoprefixer": "^10.4.0",
     "gatsby": "^4.4.0",
+    "gatsby-plugin-fontawesome-css": "^1.2.0",
     "gatsby-plugin-postcss": "^5.4.0",
     "gatsby-plugin-purgecss": "^6.1.0",
     "postcss": "^8.4.5",
