--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "triassic.dev",
-  "version": "1.0.0",
-  "description": "The website that runs on https://triassic.dev",
-  "author": "RealTriassic",
-  "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "autoprefixer": "^10.4.0",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-fontawesome-css": "^1.2.0",
-    "gatsby-plugin-postcss": "^5.4.0",
-    "gatsby-plugin-purgecss": "^6.1.0",
-    "postcss": "^8.4.5",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "tailwindcss": "^3.0.7"
-  }
+    "name": "triassic.dev",
+    "description": "The website running on Triassic's Website.",
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^1.2.36",
+        "@fortawesome/free-brands-svg-icons": "^5.15.4",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@fortawesome/react-fontawesome": "^0.1.16",
+        "next": "12.0.7",
+        "react": "17.0.2",
+        "react-dom": "17.0.2"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.0",
+        "eslint": "8.5.0",
+        "eslint-config-next": "12.0.7",
+        "postcss": "^8.4.5",
+        "tailwindcss": "^3.0.8"
+    }
 }
