--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "next": "12.0.7",
         "next-seo": "^4.28.1",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "react-tooltip": "^4.2.21"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.0",
